<resources>
    <string name="app_name">Cheer Pheasant Reintroduction</string>
    <string name="date">*Date :</string>
    <string name="user3">Sanjeev Thakur</string>
    <string name="user2">Samakshi tiwari</string>
    <string name="user1">Vikas Thakur</string>
    <string name="fix_no">*Fix no.</string>
    <string name="observer">observer</string>
    <string name="point_name">point name</string>
    <string name="coordinates">Coordinates</string>
    <string name="lat">latitude(°)</string>
    <string name="longitude">longitude(°)</string>
    <string name="submit">Submit</string>
    <string name="datetxt">14/05/2020</string>
    <string name="time">Time</string>
    <string name="azimuth_bearing">Azimuth Bearing</string>
    <string name="gs_script">https://script.google.com/d/MuzBpx9NML4owqmdogkhlMXttkBDo3nev/edit?uiv=2&amp;mid=ACjPJvGZ5D6S-89apGVu9bTaH4vfqab97cfhneEudb0qVQoVm80KnxAR5ju7L9GrqgaCgwtnd9r_wKrwNDtW9TQlMC0s-jACbLP1Zr381HtKnTgRMK2b2dENfVHgS7EBWIw2RESPyYeB7nc</string>
    <string name="latsec">lat\"</string>
    <string name="longsec">long\"</string>
    <string name="longmin">long\'</string>
    <string name="latmin">lat\'</string>
    <string name="latdeg">lat°</string>
    <string name="longdeg">long°</string>
    <string name="not_detected">Not Detected</string>
    <string name="weak_signal">Weak Signal</string>
    <string name="broad_signal">Broad Signal</string>
    <string name="observer_1">observer 1</string>
    <string name="observer2">observer2</string>
</resources>
