<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/laytime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="time"
            android:onClick="showTimePickerDialog"
            />
        <EditText
            android:id="@+id/editazbe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/azimuth_bearing"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"

            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <RadioButton
                android:id="@+id/radiond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/not_detected"
                android:onClick="signalselect"/>
            <RadioButton
                android:id="@+id/radiows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/weak_signal"
                android:onClick="signalselect"/>
            <RadioButton
                android:id="@+id/radioss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/broad_signal"
                android:onClick="signalselect"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laytime"
        android:gravity="center">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:text="back"/>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:text="save"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>