<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/laydate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/unedittxtview"
            android:text="@string/date"
            />
        <EditText
            android:id="@+id/datetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/datetxt"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="datetime"
            />
        <EditText
            android:id="@+id/fix_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fix_no"
            android:padding="15dp"
            android:digits="1234"
            android:inputType="number"
            android:maxLength="1"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layobserver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/unedittxtview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:text="@string/observer"
            />
        <CheckBox
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/user1"
            android:onClick="onSelectedob"
            />
        <CheckBox
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user1"
            android:text="@string/user2"
            android:onClick="onSelectedob"
            />
        <CheckBox
            android:id="@+id/user3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user2"
            android:text="@string/user3"
            android:onClick="onSelectedob"
            />
        <EditText
            android:id="@+id/ob1txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="observer 1"
            android:textSize="14sp"
            android:textAlignment="center"
            android:padding="5dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/ob2txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="observer2"
            android:textSize="14sp"
            android:textAlignment="center"
            android:padding="5dp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/laypointname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layobserver"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/point_or_coord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textOff="@string/point_name"
            android:textOn="@string/coordinates"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/point_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:spinnerMode="dropdown"
                android:padding="12dp"
                />
            <EditText
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lat"
                android:padding="12dp"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:layout_gravity="center"
                />
            <EditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:padding="12dp"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laypointname">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="20dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bird00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bird : 00"
                android:onClick="birddialog"/>
            <Button
                android:id="@+id/bird25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bird : 25"
                android:onClick="birddialog"/>
            <Button
                android:id="@+id/bird40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bird : 40"
                android:onClick="birddialog"/>
            <Button
                android:id="@+id/bird45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bird : 45"
                android:onClick="birddialog"/>

        </LinearLayout>
    </ScrollView>

<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="end|bottom"-->
<!--        android:layout_margin="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        android:text="@string/submit"-->
<!--        android:background="@android:color/holo_blue_bright"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        android:textSize="16dp"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>